# camflix

./: .env  .env.example  .gitignore  README.md  SYSTEM_ARCHITECTURE.md  celerybeat-schedule.bak  create_superuser.py  docker-compose.yml  pyproject.toml  requirements.txt
apps/accounts/: models.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/api/: urls.py
apps/movies/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/movies/management/commands/: import_tmdb_movies.py
apps/movies/migrations/: 0001_initial.py  0002_initial.py  0003_comment_commentlike_and_more.py
apps/ratings/: admin.py  models.py  urls.py  views.py
apps/ratings/migrations/: 0001_initial.py  0002_initial.py
apps/recommendations/: models.py  tasks.py  urls.py  views.py
apps/recommendations/migrations/: 0001_initial.py  0002_initial.py
core/: celery.py  urls.py
core/settings/: base.py  local.py  production.py
templates/: base.html  home.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_reset.html  signup.html  verification_sent.html
templates/accounts/: profile.html  settings.html
templates/movies/: comments.html  detail.html  grid.html  list.html  watchlist.html
templates/recommendations/: for_you.html
